<?xml version="1.0" encoding="utf-8"?>

<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="net.za.dyndns.gerd.deutschlandfunk.favoriten.WahlActivity">

  <item
    android:id="@+id/action_settings"
    android:orderInCategory="100"
    android:title="@string/action_settings"
    app:showAsAction="never"/>
  <item
    android:id="@+id/frischeSerienauswahlButtonsAuf"
    android:alphabeticShortcut="f"
    android:title="@string/frischeSerienauswahlButtonsAuf"
    android:titleCondensed="TitleCondensed"
    />
  <item
    android:id="@+id/abspielgerät"
    android:alphabeticShortcut="n"
    android:title="@string/seitennummer"/>
  <item
    android:id="@+id/andereSeite"
    android:title="@string/andereSeite"/>
  <item
    android:id="@+id/vorigeSeite"
    android:title="@string/vorigeSeite"/>

</menu>
