<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  tools:context="net.za.dyndns.gerd.deutschlandfunk.favoriten.WahlActivity">

  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    android:orientation="horizontal"
    >
    <!-- Serien.java füllt das vertikale LinearLayout -->
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >

      <LinearLayout
        android:id="@+id/netz0Serie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical"
        >
      </LinearLayout>
      <LinearLayout
        android:id="@+id/netz1Serie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical"
        >
      </LinearLayout>
    </LinearLayout>
  </ScrollView>

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    style="?android:attr/buttonBarStyle"
    >
    <!-- style="?android:attr/buttonBarStyle" für Trennstriche -->
    <Button
      android:id="@+id/dialogEditButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="horizontal"
      android:text="@string/benutzeredit"
      style="?android:attr/borderlessButtonStyle"
      />

    <Button
      android:id="@+id/dialogInfoButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="horizontal"
      android:text="@string/benutzerinfo"
      style="?android:attr/borderlessButtonStyle"
      />

    <Button
      android:id="@+id/dialogFrageButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="horizontal"
      android:text="@string/benutzerfrage"
      style="?android:attr/borderlessButtonStyle"
      />
  </LinearLayout>

  <!--
      <EditText
          android:id="@+id/txt_your_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"
          android:imeOptions="actionDone"
        />

    <EditText
      android:id="@+id/editText"
      android:layout_width="match_parent"
      android:inputType="text"
      android:layout_height="wrap_content"/>
  -->

  <Button
    android:id="@+id/stopTaste"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/taste1"
    />
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
>

    <Button
      android:id="@+id/button0"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:text="@string/nächstes"
      />
    <Button
      android:id="@+id/button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:text="@string/nächstes"
      />
    <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:text="@string/pause"
      />
    <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:text="@string/spielAb"
      />
    <Button
      android:id="@+id/button4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:text="@string/voriges"
      />
  </LinearLayout>

  <SeekBar
    android:id="@+id/SeekBar01"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    />

  <TextView
    android:id="@+id/fortschritt"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/fortschritt"
    />

  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    >

    <LinearLayout
      android:id="@+id/welcherTag"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    </LinearLayout>
  </ScrollView>

</LinearLayout>
  <!--
  Vorher ohne Scroll:

    <LinearLayout
      android:id="@+id/welcherTag"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="3"
      android:orientation="vertical"
      >
    </LinearLayout>

  Nachher mit Scroll:

    <ScrollView
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="3"
      >

      <LinearLayout
        android:id="@+id/welcherTag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
      </LinearLayout>
    </ScrollView>

    -->

  <!--
  <TextView
    android:id="@+id/textView1"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:text="@string/serie"
    />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/tage"
    />

  -->
